--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.5",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
